[package]
authors = ["Kenny Root"]
categories = ["command-line-utilities"]
edition = "2021"
license = "Apache-2.0"
name = "ring-detector"
repository = "https://github.com/kruton/ring-detector"
version = "0.1.0"

[[bin]]
name = "ring-detector"
path = "src/main.rs"

# This is to facilitate testing
[lib]
name = "ring_detector_lib"
path = "src/lib.rs"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size.

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
clap = {version = "4.4.18", features = ["derive", "env"]}
dns-parser = "0.8.0"
env_logger = {version = "0.11.1", default-features = false}
fstrm = {git = "https://github.com/sorz/rust-fstrm/", rev = "5416fa0"}
log = "0.4.20"
prost = "0.12.3"
rumqttc = "0.23.0"
rustls = "0.22.2" # needed due to rumqttc
tokio = {version = "1.36.0", features = ["full"]}

[build-dependencies]
prost-build = "0.12.3"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
