[package]
authors = ["Kenny Root"]
categories = ["command-line-utilities"]
edition = "2021"
license = "Apache-2.0"
name = "ring-detector"
repository = "https://github.com/kruton/ring-detector"
version = "0.1.0"

[[bin]]
name = "ring-detector"
path = "src/main.rs"

# This is to facilitate testing
[lib]
name = "ring_detector_lib"
path = "src/lib.rs"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size.

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = {version = "4.5.24", features = ["derive", "env"]}
dns-parser = "0.8.0"
env_logger = {version = "0.11.6", default-features = false}
fstrm = {git = "https://github.com/sorz/rust-fstrm/", rev = "5416fa0"}
log = "0.4.25"
prost = "0.13.5"
rumqttc = "0.24.0"
rustls = "0.23.20" # needed due to rumqttc
tokio = {version = "1.43.0", features = ["full"]}

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
