[package]
authors = ["Kenny Root"]
categories = ["command-line-utilities"]
edition = "2021"
license = "Apache-2.0"
name = "ring-detector"
repository = "https://github.com/kruton/ring-detector"
version = "0.1.0"

[[bin]]
name = "ring-detector"
path = "src/main.rs"

# This is to facilitate testing
[lib]
name = "ring_detector_lib"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'   # Optimize for size.

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.51"
bytes = "1.9.0"
clap = { version = "4.5.45", features = ["derive", "env"] }
dns-parser = "0.8.0"
env_logger = { version = "0.11.6", default-features = false }
fstrm = { git = "https://github.com/sorz/rust-fstrm/", rev = "798164b0d83778daec30d9701772936de3ec94b0" }
log = "0.4.25"
mockall = "0.14.0"
prost = "0.14.0"
rumqttc = "0.25.0"
rustls = "0.23.36"                                                       # needed due to rumqttc
tokio = { version = "1.43.0", features = ["full"] }
tempfile = "3.2.0"

[build-dependencies]
prost-build = "0.14.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
